# penezi

./: Dockerfile  README.md  app.py  command-helper.txt  createFakeData.sql  docker-compose.yaml  gunicorn_config.py  pyproject.toml  setUpDb.sql
app/: main.py
